--- a/vmb/src/mother/Makefile
+++ b/vmb/src/mother/Makefile
@@ -1,7 +1,8 @@
 PROG= mother
 UTILDIR = ../util
 OPTDIR = ../opt
-CFLAGS= -g  -D_REENTRANT -Wall  -I$(UTILDIR) -I$(OPTDIR)
+#CFLAGS= -g  -D_REENTRANT -Wall  -I$(UTILDIR) -I$(OPTDIR)
+CFLAGS= -O3  -D_REENTRANT -Wall  -I$(UTILDIR) -I$(OPTDIR)
 LDFLAGS= -L$(OPTDIR) -lvmbopt -L$(UTILDIR) -lvmb -lpthread
 CC = gcc
 
