--- a/vmb/src/rom/Makefile
+++ b/vmb/src/rom/Makefile
@@ -2,7 +2,8 @@ PROG= rom
 UTILDIR = ../util
 OPTDIR = ../opt
 UTILDIR = ../util
-CFLAGS= -g  -D_REENTRANT -Wall  -I$(UTILDIR) -I$(OPTDIR)
+#CFLAGS= -g  -D_REENTRANT -Wall  -I$(UTILDIR) -I$(OPTDIR)
+CFLAGS= -O3  -D_REENTRANT -Wall  -I$(UTILDIR) -I$(OPTDIR)
 LDFLAGS= -L$(OPTDIR) -lvmbopt -L$(UTILDIR) -lvmb -lpthread
 CC = gcc
 
