--- a/vmb/src/mmix/Makefile
+++ b/vmb/src/mmix/Makefile
@@ -10,7 +10,9 @@
 MMIXDIR=/usr/local/bin
 AS=$(MMIXDIR)/mmix-as
 LD=$(MMIXDIR)/mmix-ld
-CFLAGS = -ggdb -D_REENTRANT -Wall 
+#CFLAGS = -ggdb -D_REENTRANT -Wall 
+CFLAGS = -O3 -D_REENTRANT -Wall 
+
 PROG= mmix
 UTILDIR = ../util
 CC = gcc
