keep xpos and ypos for minimized windoes remove errormessages on terminating motherboard adding Minimized entry to mother menu
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@182 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mother/mother.vcproj
+++ b/vmb/src/mother/mother.vcproj
@@ -225,6 +225,26 @@
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
 			<File
+				RelativePath=".\connect.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\icon.ico"
+				>
+			</File>
+			<File
+				RelativePath=".\main.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\off.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\on.bmp"
+				>
+			</File>
+			<File
 				RelativePath=".\win32.rc"
 				>
 			</File>
