addint a test to write a file
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@192 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/example6/Makefile
+++ b/vmb/example6/Makefile
@@ -44,4 +44,6 @@ mount:
 	mount -o loop  disk.bin mnt
 
 mkdisk:
-	mkdosfs -C -F 32 disk.bin 128
+	mkdosfs -C -F 32  disk.bin 128
+#	mkdosfs -C -F 32 -R 2 disk.bin 128
+	
