*** empty log message ***
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@193 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/rom/Makefile
+++ b/vmb/src/rom/Makefile
@@ -8,7 +8,7 @@ LDFLAGS= -L$(OPTDIR) -lvmbopt -L$(UTILDIR) -lvmb -lpthread
 CC = gcc
 
 
-all: $(PROG) bios.img TAGS
+all: $(PROG) TAGS
 
 utilities:
 	$(MAKE) -C  $(UTILDIR)
