assembling with -noextend requires special handling of non local addresses
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@200 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmix/bios/fat32/Makefile
+++ b/vmb/src/mmix/bios/fat32/Makefile
@@ -18,7 +18,7 @@ MASFLAGS= -gdwarf2 -x
 # -static do not link to dynamic libraries
 # -nostdlib do not link in standard libraries
 
-OBJECTS= bios.o tables.o dtraps.o ftraps.o terminal.o diskio.o
+OBJECTS= bios.o dtraps.o ftraps.o terminal.o diskio.o
 LIBS=libfat32/libfat32.a
 SUBDIRS = libfat32
 
@@ -26,7 +26,7 @@ all:  bios.img bios.elf
 
 
 %.o: %.s
-	$(MAS) $(MASFLAGS) $^ -o $@
+	$(MAS) $(MASFLAGS) -no-expand $^ -o $@
 
 
 tables.o: tables.s
