updating the utilities to allow multiple bus connections on a single device. implementing an mouse and gpu interface for vram, making the sevensegment application smaller. giving the debug window a filter option rewriting the message interface for the debug window to be more efficient. everything the result of 1 week vacation in wolfgang.
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@203 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/flash/flash.vcproj
+++ b/vmb/src/flash/flash.vcproj
@@ -61,7 +61,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib"
+				AdditionalDependencies="ws2_32.lib  comctl32.lib"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -136,7 +136,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib"
+				AdditionalDependencies="ws2_32.lib  comctl32.lib"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
 				SubSystem="2"
@@ -204,6 +204,10 @@
 				RelativePath=".\resource.h"
 				>
 			</File>
+			<File
+				RelativePath="..\opt\win32connect.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
@@ -232,6 +236,10 @@
 			</File>
 			<File
 				RelativePath=".\win32.rc"
+				>
+			</File>
+			<File
+				RelativePath="..\opt\win32connect.rc"
 				>
 			</File>
 		</Filter>
