--- a/vmb/src/winvram/win32.rc
+++ b/vmb/src/winvram/win32.rc
@@ -26,23 +26,31 @@ LANGUAGE LANG_GERMAN, SUBLANG_GERMAN
 // Menu
 //
 
-IDR_MENU MENU 
+IDR_MENU MENUEX 
 BEGIN
-    POPUP "All"
+    POPUP "All",                            65535,MFT_STRING,MFS_ENABLED
     BEGIN
-        MENUITEM "&Exit",                       ID_EXIT
-        MENUITEM SEPARATOR
-        MENUITEM "&Connect...",                 ID_CONNECT
-        MENUITEM "&Settings...",                ID_SETTINGS
-        MENUITEM SEPARATOR
-        MENUITEM "&Debug",                      ID_DEBUG
-        MENUITEM "&Verbose",                    ID_VERBOSE
-        POPUP "&Help"
+        MENUITEM "&Exit",                       ID_EXIT,MFT_STRING,MFS_ENABLED
+        MENUITEM MFT_SEPARATOR
+        MENUITEM "&Connect...",                 ID_CONNECT,MFT_STRING,MFS_ENABLED
+        MENUITEM "&Settings...",                ID_SETTINGS,MFT_STRING,MFS_ENABLED
+        MENUITEM MFT_SEPARATOR
+        MENUITEM "&Debug",                      ID_DEBUG,MFT_STRING,MFS_ENABLED
+        MENUITEM "&Verbose",                    ID_VERBOSE,MFT_STRING,MFS_ENABLED
+        POPUP "&Help",                          65535,MFT_STRING,MFS_ENABLED
         BEGIN
-            MENUITEM "&About",                      ID_HELP_ABOUT
-            MENUITEM "&Help",                       ID_HELP
+            MENUITEM "&About",                      ID_HELP_ABOUT,MFT_STRING,MFS_ENABLED
+            MENUITEM "&Help",                       ID_HELP,MFT_STRING,MFS_ENABLED
         END
-        MENUITEM "Minimize",                    ID_MINIMIZE
+        MENUITEM "&Minimize",                   ID_MINIMIZE,MFT_STRING,MFS_ENABLED
+        POPUP "&Zoom",                          65535,MFT_STRING,MFS_ENABLED
+        BEGIN
+            MENUITEM "&50%",                        ID_ZOOM_50,MFT_STRING | MFT_RIGHTJUSTIFY,MFS_ENABLED
+            MENUITEM "&100%",                       ID_ZOOM_100,MFT_STRING | MFT_RIGHTJUSTIFY,MFS_ENABLED
+            MENUITEM "&200%",                       ID_ZOOM_200,MFT_STRING | MFT_RIGHTJUSTIFY,MFS_ENABLED
+            MENUITEM "&400%",                       ID_ZOOM_400,MFT_STRING | MFT_RIGHTJUSTIFY,MFS_ENABLED
+            MENUITEM "&800%",                       ID_ZOOM_800,MFT_STRING | MFT_RIGHTJUSTIFY,MFS_ENABLED
+        END
     END
 END
 
@@ -73,57 +81,45 @@ IDI_ICON                ICON                    "icon.ico"
 // Dialog
 //
 
-IDD_ABOUT DIALOG  0, 0, 186, 95
+IDD_ABOUT DIALOGEX 0, 0, 186, 95
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "About"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,129,74,50,14
-    CTEXT           "MMIX ram Version 1.0",IDC_STATIC,19,14,147,12,SS_CENTERIMAGE
+    CTEXT           "VMB Videoram, Mouse, and GPU",IDC_STATIC,19,14,147,12,SS_CENTERIMAGE
     CTEXT           "Copyright: Martin Ruckert, 2005",IDC_STATIC,23,59,147,12,SS_CENTERIMAGE
 END
 
-IDD_CONNECT DIALOG  0, 0, 186, 85
-STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Connect"
-FONT 8, "MS Sans Serif"
-BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,129,46,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,129,64,50,14
-    EDITTEXT        IDC_THE_SERVER,31,7,148,12,ES_AUTOHSCROLL
-    LTEXT           "Host:",IDC_STATIC,7,7,18,8
-    EDITTEXT        IDC_THE_PORT,31,24,40,12,ES_AUTOHSCROLL
-    LTEXT           "Port:",IDC_STATIC,7,26,16,8
-END
-
-IDD_DEBUG DIALOG  0, 0, 186, 94
-STYLE DS_SETFONT | WS_MINIMIZEBOX | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
-CAPTION "Debug"
-FONT 8, "MS Sans Serif"
-BEGIN
-    EDITTEXT        IDC_DEBUG,3,3,180,88,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL | NOT WS_TABSTOP
-END
-
-IDD_SETTINGS DIALOGEX 0, 0, 188, 134
+IDD_SETTINGS DIALOGEX 0, 0, 249, 265
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Settings"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,131,96,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,131,112,50,14
-    EDITTEXT        IDC_ADDRESS,60,7,121,12,ES_AUTOHSCROLL
-    LTEXT           "Address",IDC_STATIC,7,7,26,8
-    EDITTEXT        IDC_FRAMEWIDTH,60,22,121,12,ES_AUTOHSCROLL
-    LTEXT           "Frame width",IDC_STATIC,7,22,39,8
-    EDITTEXT        IDC_FRAMEHEIGHT,60,37,121,12,ES_AUTOHSCROLL
-    LTEXT           "Frame height",IDC_STATIC,7,37,42,8
-    EDITTEXT        IDC_WIDTH,60,52,121,12,ES_AUTOHSCROLL
-    LTEXT           "Visible width",IDC_STATIC,7,52,40,8
-    EDITTEXT        IDC_HEIGHT,60,67,121,12,ES_AUTOHSCROLL
-    LTEXT           "Visible height",IDC_STATIC,7,67,42,8
-    EDITTEXT        IDC_ZOOM,60,82,121,12,ES_AUTOHSCROLL
-    LTEXT           "Zoom",IDC_STATIC,7,82,19,8
-    
+    GROUPBOX        "Frame Buffer",IDC_STATIC,6,6,233,102
+    EDITTEXT        IDC_ADDRESS,114,18,121,12,ES_AUTOHSCROLL
+    LTEXT           "Address",IDC_STATIC,12,18,26,8
+    EDITTEXT        IDC_ADDRESS_MOUSE,114,120,121,12,ES_AUTOHSCROLL
+    LTEXT           "Address",IDC_STATIC,12,120,26,8
+    EDITTEXT        IDC_FRAMEWIDTH,114,36,121,12,ES_AUTOHSCROLL
+    LTEXT           "Frame width",IDC_STATIC,12,36,39,8
+    EDITTEXT        IDC_FRAMEHEIGHT,114,54,121,12,ES_AUTOHSCROLL
+    LTEXT           "Frame height",IDC_STATIC,12,54,42,8
+    EDITTEXT        IDC_WIDTH,114,72,121,12,ES_AUTOHSCROLL
+    LTEXT           "Visible width",IDC_STATIC,12,72,40,8
+    EDITTEXT        IDC_HEIGHT,114,90,121,12,ES_AUTOHSCROLL
+    LTEXT           "Visible height",IDC_STATIC,12,90,42,8
+    GROUPBOX        "Mouse",IDC_STATIC,6,108,233,66
+    EDITTEXT        IDC_INTERRUPT,114,138,121,12,ES_AUTOHSCROLL
+    LTEXT           "Interrupt ",IDC_STATIC,12,138,29,8
+    CONTROL         "Enable Move Interrupts",IDC_MOUSEMOVE,"Button",BS_AUTOCHECKBOX | BS_LEFTTEXT | WS_TABSTOP,12,156,114,10
+    GROUPBOX        "GPU",IDC_STATIC,6,174,234,48
+    EDITTEXT        IDC_ADDRESS_GPU,114,186,121,12,ES_AUTOHSCROLL
+    LTEXT           "Address",IDC_STATIC,12,186,26,8
+    DEFPUSHBUTTON   "OK",IDOK,192,247,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,192,228,50,14
+    EDITTEXT        IDC_GPU_INTERRUPT,114,204,121,12,ES_AUTOHSCROLL
+    LTEXT           "Interrupt ",IDC_STATIC,12,204,29,8
 END
 
 
@@ -143,28 +139,12 @@ BEGIN
         BOTTOMMARGIN, 88
     END
 
-    IDD_CONNECT, DIALOG
-    BEGIN
-        LEFTMARGIN, 7
-        RIGHTMARGIN, 179
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 78
-    END
-
-    IDD_DEBUG, DIALOG
-    BEGIN
-        LEFTMARGIN, 3
-        RIGHTMARGIN, 183
-        TOPMARGIN, 3
-        BOTTOMMARGIN, 91
-    END
-
     IDD_SETTINGS, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 181
+        RIGHTMARGIN, 242
         TOPMARGIN, 7
-        BOTTOMMARGIN, 127
+        BOTTOMMARGIN, 258
     END
 END
 #endif    // APSTUDIO_INVOKED
