small changes that accumulated over the last time.
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@206 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/Makefile
+++ b/vmb/Makefile
@@ -15,6 +15,18 @@ install:
 	  $(MAKE) -C $$dir install; \
 	done
 
+www: htdocs
+	rsync -aivzC htdocs/ ruckert,vmb@web.sourceforge.net:htdocs/
+
+
+helpfiles := $(wildcard src/*/help.html)
+helpdirs := $(patsubst src/%/help.html,%,$(helpfiles))
+
+htdocs:
+	for f in $(helpdirs); do \
+	  cp src/$$f/help.html htdocs/"$$f"_help.html ; \
+	done
+
      
 clean:
 	rm -f *.o *~ 
@@ -22,6 +34,15 @@ clean:
 	  $(MAKE) -C $$dir clean; \
 	done
 
+ssh:
+	ssh ruckert,vmb@shell.sourceforge.net
+
+
 
 TAGS:
 	etags */*.c */*.h */*.w
+
+.PHONY : www
+.PHONY : ssh
+.PHONY : clean
+.PHONY : htdocs
