adding rQ logic to mmix and a help file for the timer device
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@210 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmix/Makefile
+++ b/vmb/src/mmix/Makefile
@@ -10,8 +10,8 @@
 MMIXDIR=/usr/local/bin
 AS=$(MMIXDIR)/mmix-as
 LD=$(MMIXDIR)/mmix-ld
-#CFLAGS = -ggdb -D_REENTRANT -Wall 
-CFLAGS = -O3 -D_REENTRANT -Wall 
+CFLAGS = -ggdb -D_REENTRANT -Wall 
+#CFLAGS = -O3 -D_REENTRANT -Wall 
 
 PROG= mmix
 UTILDIR = ../util
