--- a/vmb/src/util/Makefile
+++ b/vmb/src/util/Makefile
@@ -1,5 +1,6 @@
 
-CFLAGS= -O3 -D_REENTRANT -Wall 
+CFLAGS= -ggdb -D_REENTRANT -Wall 
+#CFLAGS= -O3 -D_REENTRANT -Wall 
 CC= gcc
 AR = ar
 ARFLAGS = cru
