getting the timed wait for event work under unix
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@215 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmix/Makefile
+++ b/vmb/src/mmix/Makefile
@@ -17,7 +17,7 @@ PROG= mmix
 UTILDIR = ../util
 CC = gcc
 INCDIRS = -I$(UTILDIR)
-LIBS    = -L$(UTILDIR) -lm -lvmb -lpthread
+LIBS    = -L$(UTILDIR) -lm -lvmb -lpthread -lrt
 
 
 all: mmix mmixal mmoboot
