--- a/vmb/src/screen/win32.rc
+++ b/vmb/src/screen/win32.rc
@@ -94,10 +94,10 @@ BEGIN
     CTEXT           "Copyright: Martin Ruckert, 2005",IDC_STATIC,23,59,147,12,SS_CENTERIMAGE
 END
 
-IDD_SETTINGS DIALOG  0, 0, 186, 95
+IDD_SETTINGS DIALOGEX 0, 0, 186, 95
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Settings"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,129,55,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,129,74,50,14
@@ -105,6 +105,10 @@ BEGIN
     LTEXT           "Address",IDC_STATIC,7,7,26,8
     EDITTEXT        IDC_INTERRUPT,43,21,136,11,ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "Interrupt",IDC_STATIC,7,21,27,8
+    GROUPBOX        "Font size",IDC_STATIC,6,36,113,52
+    CONTROL         "Small 5x12",IDC_SMALL_FONT,"Button",BS_AUTORADIOBUTTON,48,48,50,10
+    CONTROL         "Medium 8x15",IDC_MEDIUM_FONT,"Button",BS_AUTORADIOBUTTON,48,60,58,10
+    CONTROL         "Large 10 x24",IDC_LARGE_FONT,"Button",BS_AUTORADIOBUTTON,48,72,57,10
 END
 
 
