--- a/vmb/src/util/Makefile
+++ b/vmb/src/util/Makefile
@@ -8,7 +8,7 @@ RANLIB = ranlib
 
 VMBDEFAULTS = vmbpoweron.o vmbpoweroff.o vmbreset.o vmbinterrupt.o vmbgetpayload.o vmbputpayload.o vmbunknown.o vmbdisconnected.o vmbterminate.o
 
-VMBOBJECTS = cache.o vmb.o message.o bus-arith.o error.o $(VMBDEFAULTS)
+VMBOBJECTS = cache.o vmb.o vmbtimewait.o message.o bus-arith.o error.o $(VMBDEFAULTS)
 
 .PHONY:  clean
      
