Getting the unix version to run again after many win32 improvements
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@224 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/Makefile
+++ b/vmb/src/Makefile
@@ -5,7 +5,7 @@ SUBDIRS  = util opt device mother\
            mmix mmixgdb \
            screen keyboard vram \
            ram rom flash \
-           hostdisk disk  
+           disk hostdisk   
 
 .PHONY: hardware $(SUBDIRS) clean
      
