first win32 version with comandlineparameters for the number and color of leds
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@227 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/led/led.vcproj
+++ b/vmb/src/led/led.vcproj
@@ -191,6 +191,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\optiontab.c"
+				>
+			</File>
+			<File
 				RelativePath=".\winmain.c"
 				>
 			</File>
@@ -215,23 +219,27 @@
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
 			<File
-				RelativePath=".\connect.bmp"
-				>
-			</File>
-			<File
 				RelativePath=".\icon.ico"
 				>
 			</File>
 			<File
-				RelativePath=".\main.bmp"
+				RelativePath=".\ledDisconnect.bmp"
 				>
 			</File>
 			<File
-				RelativePath=".\off.bmp"
+				RelativePath=".\ledOffB.bmp"
 				>
 			</File>
 			<File
-				RelativePath=".\on.bmp"
+				RelativePath=".\ledOffW.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\ledOnB.bmp"
+				>
+			</File>
+			<File
+				RelativePath=".\ledOnW.bmp"
 				>
 			</File>
 			<File
