making mmix work with the new joint change file
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@241 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmix/Makefile
+++ b/vmb/src/mmix/Makefile
@@ -10,7 +10,7 @@
 MMIXDIR=/usr/local/bin
 AS=$(MMIXDIR)/mmix-as
 LD=$(MMIXDIR)/mmix-ld
-CFLAGS = -ggdb -D_REENTRANT -Wall 
+CFLAGS = -ggdb -O0 -D_REENTRANT -Wall 
 #CFLAGS = -O3 -D_REENTRANT -Wall 
 
 UTILDIR = ../util
