--- a/vmb/src/mmix/gmmix.vcproj
+++ b/vmb/src/mmix/gmmix.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="8,00"
-	Name="mmix"
-	ProjectGUID="{5517BA05-32AF-42D6-A69B-26BA7F0F4090}"
-	RootNamespace="mmix"
+	Name="gmmix"
+	ProjectGUID="{428E0DCB-1AC5-41C7-AB33-FB3D5930BB4F}"
+	RootNamespace="gmmix"
 	Keyword="Win32Proj"
 	>
 	<Platforms>
@@ -24,6 +24,7 @@
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
+				CommandLine=""
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -40,8 +41,8 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\util; ..\opt"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
+				AdditionalIncludeDirectories="..\util"
+				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -61,10 +62,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib"
+				AdditionalDependencies="Ws2_32.lib"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
-				SubSystem="2"
+				SubSystem="1"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -72,6 +73,7 @@
 			/>
 			<Tool
 				Name="VCManifestTool"
+				UseUnicodeResponseFiles="false"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -97,11 +99,12 @@
 			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="1"
-			CharacterSet="0"
+			CharacterSet="1"
 			WholeProgramOptimization="1"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
+				CommandLine=""
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -117,8 +120,8 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\util; ..\opt"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
+				AdditionalIncludeDirectories="..\util"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
@@ -136,10 +139,10 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ws2_32.lib"
+				AdditionalDependencies="Ws2_32.lib"
 				LinkIncremental="1"
 				GenerateDebugInformation="true"
-				SubSystem="2"
+				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				TargetMachine="1"
@@ -175,10 +178,6 @@
 			ReferencedProjectIdentifier="{C7A37974-103B-4A8A-ACD4-F304C0D9C35C}"
 			RelativePathToProject="..\util\vmbwin.vcproj"
 		/>
-		<ProjectReference
-			ReferencedProjectIdentifier="{5A384688-86B5-439D-B700-C52330851681}"
-			RelativePathToProject="..\opt\vmbwinopt.vcproj"
-		/>
 	</References>
 	<Files>
 		<Filter
@@ -211,19 +210,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\mmix-sim.c"
-				>
-			</File>
-			<File
-				RelativePath=".\optiontab.c"
+				RelativePath=".\mmix-gdb.c"
 				>
 			</File>
 			<File
 				RelativePath=".\remote-utils.c"
-				>
-			</File>
-			<File
-				RelativePath=".\winmain.c"
 				>
 			</File>
 		</Filter>
@@ -233,15 +224,7 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath=".\abstime.h"
-				>
-			</File>
-			<File
 				RelativePath=".\address.h"
-				>
-			</File>
-			<File
-				RelativePath=".\breaks.h"
 				>
 			</File>
 			<File
@@ -257,7 +240,15 @@
 				>
 			</File>
 			<File
-				RelativePath=".\resource.h"
+				RelativePath=".\mmix-internals.h"
+				>
+			</File>
+			<File
+				RelativePath=".\signals.h"
+				>
+			</File>
+			<File
+				RelativePath="..\util\vmb.h"
 				>
 			</File>
 		</Filter>
@@ -266,35 +257,15 @@
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
-			<File
-				RelativePath=".\connect.bmp"
-				>
-			</File>
-			<File
-				RelativePath=".\icon.ico"
-				>
-			</File>
-			<File
-				RelativePath=".\main.bmp"
-				>
-			</File>
-			<File
-				RelativePath=".\off.bmp"
-				>
-			</File>
-			<File
-				RelativePath=".\on.bmp"
-				>
-			</File>
-			<File
-				RelativePath=".\wait.bmp"
-				>
-			</File>
-			<File
-				RelativePath=".\win32.rc"
-				>
-			</File>
 		</Filter>
+		<File
+			RelativePath=".\gdb.ch"
+			>
+		</File>
+		<File
+			RelativePath=".\vmb.ch"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
