implementing outgoiung BITBLT for winvram, adjusting help file
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@244 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/util/vmbwin.vcproj
+++ b/vmb/src/util/vmbwin.vcproj
@@ -172,6 +172,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\vmberror.c"
+				>
+			</File>
+			<File
 				RelativePath=".\vmbpoweroff.c"
 				>
 			</File>
@@ -185,6 +189,10 @@
 			</File>
 			<File
 				RelativePath=".\vmbterminate.c"
+				>
+			</File>
+			<File
+				RelativePath=".\vmbtimewait.c"
 				>
 			</File>
 		</Filter>
