small bug fixes for ss2011
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@245 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mother/mother.vcproj
+++ b/vmb/src/mother/mother.vcproj
@@ -192,6 +192,10 @@
 				RelativePath=".\mother.c"
 				>
 			</File>
+			<File
+				RelativePath=".\optiontab.c"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
