putting mmixal.c back in
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@248 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/Makefile
+++ b/vmb/src/Makefile
@@ -2,7 +2,7 @@
 CFLAGS= -g -Wall
 
 SUBDIRS  = util opt device mother\
-           mmix mmixgdb \
+           mmix \
            screen keyboard vram \
            ram rom flash \
            disk hostdisk led  
