working win32 version for up to 8 leds
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@250 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/led/win32.rc
+++ b/vmb/src/led/win32.rc
@@ -119,6 +119,8 @@ BEGIN
     PUSHBUTTON      "Color ...",IDC_CBUTTON1,222,48,30,14
     CONTROL         "",IDC_COLOR0,"Static",SS_BITMAP | SS_REALSIZEIMAGE,264,24,15,13,WS_EX_TRANSPARENT
     PUSHBUTTON      "Color ...",IDC_CBUTTON0,258,48,30,14
+    EDITTEXT        IDC_NLEDS,78,67,16,14,ES_AUTOHSCROLL
+    LTEXT           "Number of LEDs",IDC_STATIC,7,68,53,8
 END
 
 
