reevaluating the debug levels merging changes from the last win32 commit into linux
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@252 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/opt/win32connect.rc
+++ b/vmb/src/opt/win32connect.rc
@@ -47,14 +47,14 @@ BEGIN
     EDITTEXT        IDC_DEBUG,12,22,89,12,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL | NOT WS_TABSTOP
     CONTROL         "",IDC_TAB_DEBUG,"SysTabControl32",0x0,6,6,186,17
     CONTROL         "Hide All",IDC_HIDE_ALL,"Button",BS_AUTO3STATE | WS_TABSTOP,12,30,40,10
+    CONTROL         "Hide Payloads",IDC_HIDE_PAYLOAD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,48,61,10
     CONTROL         "Hide Bus Messages",IDC_HIDE_MSG,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,66,79,10
     CONTROL         "Hide Infos",IDC_HIDE_INFO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,84,48,10
     CONTROL         "Hide Progress Indicators",IDC_HIDE_PROGRESS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,102,93,10
     CONTROL         "Hide Notifications",IDC_HIDE_NOTIFY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,108,48,71,10
-    CONTROL         "Hide Errors",IDC_HIDE_ERROR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,108,66,51,10
-    CONTROL         "Hide Critical Errors",IDC_HIDE_CRITICAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,108,84,73,10
+    CONTROL         "Hide Warnings",IDC_HIDE_WARN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,108,66,51,10
+    CONTROL         "Hide Errors",IDC_HIDE_ERROR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,108,84,73,10
     CONTROL         "Hide Fatal Errors",IDC_HIDE_FATAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,108,102,68,10
-    CONTROL         "Hide Payloads",IDC_HIDE_PAYLOAD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,48,61,10
 END
 
 
