debuging mmix runing on mmix made me improve the fat32 bios fixing bugs in mmix, in the disk, and in gdb (not part of vmb)
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@257 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/example6/Makefile
+++ b/vmb/example6/Makefile
@@ -1,7 +1,7 @@
 #   produce an object file from the assembler file
 BIN=/home/ruckert/mmixmb/bitrange/install/bin
 AFLAGS= -gdwarf2
-AS=$(BIN)/mmixal
+AS=mmixal
 MAS=$(BIN)/mmix-as
 MLD=$(BIN)/mmix-ld
 MCC=$(BIN)/mmix-gcc
