changed sizes of bitmaps to be 300x100 moved debug window to the side other small improvements of the GUI
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@258 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/screen/win32.rc
+++ b/vmb/src/screen/win32.rc
@@ -94,21 +94,22 @@ BEGIN
     CTEXT           "Copyright: Martin Ruckert, 2005",IDC_STATIC,23,59,147,12,SS_CENTERIMAGE
 END
 
-IDD_SETTINGS DIALOGEX 0, 0, 186, 95
+IDD_SETTINGS DIALOGEX 0, 0, 186, 105
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Settings"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,129,55,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,129,74,50,14
-    EDITTEXT        IDC_ADDRESS,43,7,136,11,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "OK",IDOK,129,66,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,129,84,50,14
+    EDITTEXT        IDC_ADDRESS,43,7,136,12,ES_AUTOHSCROLL
     LTEXT           "Address",IDC_STATIC,7,7,26,8
-    EDITTEXT        IDC_INTERRUPT,43,21,136,11,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_INTERRUPT,43,21,136,12,ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "Interrupt",IDC_STATIC,7,21,27,8
-    GROUPBOX        "Font size",IDC_STATIC,6,36,113,52
-    CONTROL         "Small 5x12",IDC_SMALL_FONT,"Button",BS_AUTORADIOBUTTON,48,48,50,10
-    CONTROL         "Medium 8x15",IDC_MEDIUM_FONT,"Button",BS_AUTORADIOBUTTON,48,60,58,10
-    CONTROL         "Large 10 x24",IDC_LARGE_FONT,"Button",BS_AUTORADIOBUTTON,48,72,57,10
+    GROUPBOX        "Font size",IDC_STATIC,7,36,112,62
+    CONTROL         "Small",IDC_SMALL_FONT,"Button",BS_AUTORADIOBUTTON,14,48,33,10
+    CONTROL         "Medium",IDC_MEDIUM_FONT,"Button",BS_AUTORADIOBUTTON,14,60,41,10
+    CONTROL         "Large",IDC_LARGE_FONT,"Button",BS_AUTORADIOBUTTON,14,72,34,10
+    CONTROL         "Custom ...",IDC_CUSTOM_FONT,"Button",BS_AUTORADIOBUTTON,14,84,61,10
 END
 
 
@@ -133,7 +134,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 179
         TOPMARGIN, 7
-        BOTTOMMARGIN, 88
+        BOTTOMMARGIN, 98
     END
 END
 #endif    // APSTUDIO_INVOKED
