added memory inspector to the debug window, currently avalable only with ram other devices will follow soon
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@261 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/opt/vmbwinopt.vcproj
+++ b/vmb/src/opt/vmbwinopt.vcproj
@@ -185,6 +185,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\winmem.c"
+				>
+			</File>
+			<File
 				RelativePath=".\winpos.c"
 				>
 			</File>
@@ -208,6 +212,10 @@
 			</File>
 			<File
 				RelativePath=".\resource.h"
+				>
+			</File>
+			<File
+				RelativePath=".\winmem.h"
 				>
 			</File>
 			<File
