memory inspector in win32 debugged and done
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@263 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/opt/win32connect.rc
+++ b/vmb/src/opt/win32connect.rc
@@ -123,7 +123,7 @@ STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
 EXSTYLE WS_EX_APPWINDOW
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    SCROLLBAR       IDC_MEM_SCROLLBAR,176,18,12,109,SBS_VERT | WS_TABSTOP
+    SCROLLBAR       IDC_MEM_SCROLLBAR,176,18,12,109,SBS_VERT
     EDITTEXT        IDC_GOTO,24,2,85,12,ES_AUTOHSCROLL | NOT WS_BORDER | WS_GROUP,WS_EX_CLIENTEDGE
     LTEXT           "Go to:",IDC_STATIC,2,2,21,8
     PUSHBUTTON      "Format",IDC_FORMAT,116,0,30,13
