--- a/vmb/src/opt/vmbwinopt.vcproj
+++ b/vmb/src/opt/vmbwinopt.vcproj
@@ -181,6 +181,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\windialog.c"
+				>
+			</File>
+			<File
 				RelativePath=".\winmain.c"
 				>
 			</File>
