--- a/vmb/src/opt/win32connect.rc
+++ b/vmb/src/opt/win32connect.rc
@@ -29,7 +29,7 @@ LANGUAGE LANG_GERMAN, SUBLANG_GERMAN
 IDD_CONNECT DIALOGEX 0, 0, 186, 85
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Connect Global"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,129,46,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,129,64,50,14
@@ -47,15 +47,22 @@ FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     EDITTEXT        IDC_DEBUG,12,22,89,12,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_READONLY | WS_VSCROLL
     CONTROL         "",IDC_TAB_DEBUG,"SysTabControl32",WS_TABSTOP,23,6,186,17
-    CONTROL         "Hide All",IDC_HIDE_ALL,"Button",BS_AUTO3STATE | WS_TABSTOP,12,30,40,10
-    CONTROL         "Hide Payloads",IDC_HIDE_PAYLOAD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,48,61,10
-    CONTROL         "Hide Bus Messages",IDC_HIDE_MSG,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,66,79,10
-    CONTROL         "Hide Infos",IDC_HIDE_INFO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,84,48,10
-    CONTROL         "Hide Progress Indicators",IDC_HIDE_PROGRESS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,102,93,10
-    CONTROL         "Hide Notifications",IDC_HIDE_NOTIFY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,108,48,71,10
-    CONTROL         "Hide Warnings",IDC_HIDE_WARN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,108,66,51,10
-    CONTROL         "Hide Errors",IDC_HIDE_ERROR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,108,84,73,10
-    CONTROL         "Hide Fatal Errors",IDC_HIDE_FATAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,108,102,68,10
+END
+
+IDD_FILTER DIALOGEX 10, 30, 190, 93
+STYLE DS_SETFONT | DS_FIXEDSYS | DS_CONTROL | WS_CHILD
+EXSTYLE WS_EX_CONTROLPARENT | WS_EX_APPWINDOW
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    CONTROL         "Hide All",IDC_HIDE_ALL,"Button",BS_AUTO3STATE | WS_TABSTOP,11,3,40,10
+    CONTROL         "Hide Payloads",IDC_HIDE_PAYLOAD,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,11,21,61,10
+    CONTROL         "Hide Bus Messages",IDC_HIDE_MSG,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,11,39,79,10
+    CONTROL         "Hide Infos",IDC_HIDE_INFO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,11,57,48,10
+    CONTROL         "Hide Progress Indicators",IDC_HIDE_PROGRESS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,11,75,93,10
+    CONTROL         "Hide Notifications",IDC_HIDE_NOTIFY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,107,21,71,10
+    CONTROL         "Hide Warnings",IDC_HIDE_WARN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,107,39,51,10
+    CONTROL         "Hide Errors",IDC_HIDE_ERROR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,107,57,73,10
+    CONTROL         "Hide Fatal Errors",IDC_HIDE_FATAL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,107,75,68,10
 END
 
 IDD_MEMORY DIALOGEX 0, 0, 190, 133
@@ -65,7 +72,7 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     SCROLLBAR       IDC_MEM_SCROLLBAR,176,18,12,109,SBS_VERT
     EDITTEXT        IDC_GOTO,24,2,85,12,ES_AUTOHSCROLL | NOT WS_BORDER | WS_GROUP,WS_EX_CLIENTEDGE
-    LTEXT           "Go to:",IDC_STATIC,2,2,21,8
+    LTEXT           "Go to:",IDC_GOTO_PROMPT,2,2,21,8
     PUSHBUTTON      "Format",IDC_FORMAT,116,0,30,13
     PUSHBUTTON      "Size",IDC_CHUNK,149,0,30,13
 END
@@ -84,6 +91,12 @@ BEGIN
         RIGHTMARGIN, 209
         VERTGUIDE, 209
         HORZGUIDE, 120
+    END
+
+    IDD_FILTER, DIALOG
+    BEGIN
+        RIGHTMARGIN, 188
+        BOTTOMMARGIN, 92
     END
 
     IDD_MEMORY, DIALOG
