--- a/vmb/src/ram/win32.rc
+++ b/vmb/src/ram/win32.rc
@@ -93,10 +93,10 @@ BEGIN
     CTEXT           "Copyright: Martin Ruckert, 2005",IDC_STATIC,23,59,147,12,SS_CENTERIMAGE
 END
 
-IDD_SETTINGS DIALOG  0, 0, 186, 95
+IDD_SETTINGS DIALOGEX 0, 0, 186, 95
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Settings"
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     DEFPUSHBUTTON   "OK",IDOK,129,55,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,129,74,50,14
