adding a script to produce large pagetables in ROM
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@273 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmix/bios/fat32/libfat32/Makefile
+++ b/vmb/src/mmix/bios/fat32/libfat32/Makefile
@@ -1,9 +1,11 @@
 
+BIN=/opt/mmix/bin
+CC=$(BIN)/mmix-gcc
+AR=$(BIN)/mmix-ar
+RANLIB = $(BIN)/mmix-ranlib
+
 CFLAGS= -ggdb -Wall -melf -mabi=mmixware -mno-base-addresses -O1
-CC= mmix-gcc
-AR = mmix-ar
 ARFLAGS = cru
-RANLIB = mmix-ranlib
 
 
 OBJECTS = FAT32_Cache.o FAT32_Access.o  FAT32_FileLib.o \
