added help files and gif images
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@275 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmix/bios/fat32/libfat32/Makefile
+++ b/vmb/src/mmix/bios/fat32/libfat32/Makefile
@@ -1,8 +1,13 @@
 
-BIN=/opt/mmix/bin
-CC=$(BIN)/mmix-gcc
-AR=$(BIN)/mmix-ar
-RANLIB = $(BIN)/mmix-ranlib
+# change this to the directory where mmix-gcc is installed
+#BIN=/c/Program\ Files/mmix/bin/
+#BIN=/opt/mmix/bin/
+# or leave empty if mmix-gcc and friends is on your search path
+BIN=
+
+CC=$(BIN)mmix-gcc
+AR=$(BIN)mmix-ar
+RANLIB=$(BIN)mmix-ranlib
 
 CFLAGS= -ggdb -Wall -melf -mabi=mmixware -mno-base-addresses -O1
 ARFLAGS = cru
@@ -13,7 +18,7 @@ OBJECTS = FAT32_Cache.o FAT32_Access.o  FAT32_FileLib.o \
           FAT32_Disk.o  FAT32_Name.o \
 
 
-all: .depend libfat32.a TAGS
+all: .depend libfat32.a
 
 
 libfat32.a: $(OBJECTS)
