--- a/vmb/src/mmix/bios/fat32/Makefile
+++ b/vmb/src/mmix/bios/fat32/Makefile
@@ -1,20 +1,25 @@
 # making the rom bios program cross-compiling on the host with target = mmix
 
-BIN=/opt/mmix/bin
-MAS=$(BIN)/mmix-as
-MLD=$(BIN)/mmix-ld
-MCC=$(BIN)/mmix-gcc
-MOCP=$(BIN)/mmix-objcopy
+# change this to the directory where mmix-gcc is installed
+#BIN=/c/Program\ Files/mmix/bin/
+#BIN=/opt/mmix/bin/
+# or leave empty if mmix-gcc and friends is on your search path
+BIN=
 
-#MCFLAGS= -ggdb  -O0 -Wall -melf -mabi=mmixware -mno-base-addresses 
-MCFLAGS=         -O3 -Wall -melf -mabi=mmixware -mno-base-addresses
-#MLDFLAGS=--entry=_start.
-MLDFLAGS=  -static \
+AS=$(BIN)mmix-as
+LD=$(BIN)mmix-ld
+CC=$(BIN)mmix-gcc
+OCP=$(BIN)mmix-objcopy
+
+#CFLAGS= -ggdb  -O0 -Wall -melf -mabi=mmixware -mno-base-addresses 
+CFLAGS=         -O3 -Wall -melf -mabi=mmixware -mno-base-addresses
+#LDFLAGS=--entry=_start.
+LDFLAGS=  -static \
           --section-start .text=0x8000000000000000 \
           --section-start .bss=0x8000000100000000
 # add -t and -M to the loadflags to get more output
 
-MASFLAGS= -gdwarf2 -x 
+ASFLAGS= -gdwarf2 -x 
 
 # some more linker optione
 # -lc link in libc
@@ -32,27 +37,27 @@ pagetab.s: mkpagetab.sh
 	mkpagetab.sh > pagetab.s
 
 bios.o: bios.s pagetab.s
-	$(MAS) $(MASFLAGS) bios.s -o $@
+	$(AS) $(ASFLAGS) bios.s -o $@
 
 %.o: %.s
-	$(MAS) $(MASFLAGS) $^ -o $@
+	$(AS) $(ASFLAGS) $^ -o $@
 
 
 tables.o: tables.s
-	$(MAS) $(MASFLAGS) -no-expand $^ -o $@
+	$(AS) $(ASFLAGS) -no-expand $^ -o $@
 
 
 
 %.o: %.c
-	$(MCC) $(MCFLAGS) -c $^ -o $@
+	$(CC) $(CFLAGS) -c $^ -o $@
 
 
 bios.img: bios.elf
-	$(MOCP) -O binary bios.elf bios.img
+	$(OCP) -O binary bios.elf bios.img
 
 bios.elf: $(OBJECTS) $(LIBS)
-	$(MLD) $(MLDFLAGS) --oformat elf64-mmix $(OBJECTS) $(LFLAGS)  -o $@
-	$(MOCP) -O binary bios.elf bios.img
+	$(LD) $(LDFLAGS) --oformat elf64-mmix $(OBJECTS) $(LFLAGS)  -o $@
+	$(OCP) -O binary bios.elf bios.img
 
 
 
