--- a/vmb/src/mmix/mmix.vcproj
+++ b/vmb/src/mmix/mmix.vcproj
@@ -2,7 +2,7 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="8,00"
-	Name="mmix"
+	Name="vmbmmix"
 	ProjectGUID="{456CB0C3-26FB-4533-A616-39D9175F8CA5}"
 	RootNamespace="mmix"
 	Keyword="Win32Proj"
