making the changes in the win32 version work under linux
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@281 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmix/Makefile
+++ b/vmb/src/mmix/Makefile
@@ -19,7 +19,10 @@ INCDIRS = -I$(UTILDIR)
 LIBS    = -L$(UTILDIR) -lm -lvmb -lpthread -lrt
 
 
-all: mmix gmmix mmixal mmoboot mmotype
+all: .depend mmix gmmix mmixal mmoboot mmotype
+
+.depend:
+	gcc -MM *.c > .depend
 
 utilities:
 	$(MAKE) -C  $(UTILDIR)
@@ -131,3 +134,6 @@ mmixal: mmix-arith.o mmixal.c
 
 TAGS:
 	etags *.c *.h ../util/*.c ../util/*.h
+
+
+include .depend
