porting latest changes in timed wait to windows addint ctangle and ctie to the Visual solution files for mmix
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@285 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmix/mmix.vcproj
+++ b/vmb/src/mmix/mmix.vcproj
@@ -229,8 +229,48 @@
 			>
 		</Filter>
 		<File
+			RelativePath=".\mmix-arith.w"
+			>
+			<FileConfiguration
+				Name="Release|Win32"
+				>
+				<Tool
+					Name="VCCustomBuildTool"
+					Description="Tangle"
+					CommandLine="ctangle mmix-arith.w mmix-arith.c"
+					Outputs="mmix-arith.c"
+				/>
+			</FileConfiguration>
+		</File>
+		<File
+			RelativePath=".\mmix-sim.w"
+			>
+			<FileConfiguration
+				Name="Release|Win32"
+				>
+				<Tool
+					Name="VCCustomBuildTool"
+					Description="Tangle"
+					CommandLine="ctangle mmix-sim.w vmb.ch mmix-vmb.c"
+					AdditionalDependencies="vmb.ch"
+					Outputs="mmix-vmb.c"
+				/>
+			</FileConfiguration>
+		</File>
+		<File
 			RelativePath=".\vmb.ch"
 			>
+			<FileConfiguration
+				Name="Release|Win32"
+				>
+				<Tool
+					Name="VCCustomBuildTool"
+					Description="Tangle"
+					CommandLine="ctangle mmix-sim.w vmb.ch mmix-vmb.c"
+					AdditionalDependencies="mmix-sim.w"
+					Outputs="mmix-sim.c"
+				/>
+			</FileConfiguration>
 		</File>
 	</Files>
 	<Globals>
