--- a/vmb/src/mmix/mmoboot.vcproj
+++ b/vmb/src/mmix/mmoboot.vcproj
@@ -191,6 +191,20 @@
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
 		</Filter>
+		<File
+			RelativePath=".\mmoboot.w"
+			>
+			<FileConfiguration
+				Name="Release|Win32"
+				>
+				<Tool
+					Name="VCCustomBuildTool"
+					Description="Tangle"
+					CommandLine="ctangle mmoboot.w mmoboot.c"
+					Outputs="mmoboot.c"
+				/>
+			</FileConfiguration>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
