--- a/vmb/src/mmix/gmmix.vcproj
+++ b/vmb/src/mmix/gmmix.vcproj
@@ -261,10 +261,75 @@
 		<File
 			RelativePath=".\gdb.ch"
 			>
+			<FileConfiguration
+				Name="Release|Win32"
+				>
+				<Tool
+					Name="VCCustomBuildTool"
+					Description="Tie vmb and gdb"
+					CommandLine="ctangle mmix-sim.w vmb-gdb.ch mmix-gdb.c"
+					AdditionalDependencies="mmix-sim.w vmb.ch"
+					Outputs="vmb-gdb.ch"
+				/>
+			</FileConfiguration>
+		</File>
+		<File
+			RelativePath=".\mmix-arith.w"
+			>
+			<FileConfiguration
+				Name="Release|Win32"
+				>
+				<Tool
+					Name="VCCustomBuildTool"
+					CommandLine="ctangle mmix-arith.w mmix-arith.c"
+					Outputs="mmix-arith.c"
+				/>
+			</FileConfiguration>
+		</File>
+		<File
+			RelativePath=".\mmix-sim.w"
+			>
+			<FileConfiguration
+				Name="Release|Win32"
+				>
+				<Tool
+					Name="VCCustomBuildTool"
+					Description="Tangle mmix-sim with vmb and gdb"
+					CommandLine="ctangle mmix-sim.w vmb-gdb.ch mmix-gdb.c"
+					AdditionalDependencies="vmb-gdb.ch"
+					Outputs="mmix-gdb.c"
+				/>
+			</FileConfiguration>
+		</File>
+		<File
+			RelativePath=".\vmb-gdb.ch"
+			>
+			<FileConfiguration
+				Name="Release|Win32"
+				>
+				<Tool
+					Name="VCCustomBuildTool"
+					Description="Tangle mmix-sim with vmb and gdb"
+					CommandLine="ctangle mmix-sim.w vmb-gdb.ch mmix-gdb.c"
+					AdditionalDependencies="mmix-sim.w"
+					Outputs="mmix-gdb.c"
+				/>
+			</FileConfiguration>
 		</File>
 		<File
 			RelativePath=".\vmb.ch"
 			>
+			<FileConfiguration
+				Name="Release|Win32"
+				>
+				<Tool
+					Name="VCCustomBuildTool"
+					Description="Tie vmb and gdb"
+					CommandLine="ctie -c vmb-gdb.ch mmix-sim.w vmb.ch gdb.ch"
+					AdditionalDependencies="mmix-sim.w gdb.ch"
+					Outputs="vmb-gdb.ch"
+				/>
+			</FileConfiguration>
 		</File>
 	</Files>
 	<Globals>
