adding a logo for vmb
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@287 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/Makefile
+++ b/vmb/Makefile
@@ -32,7 +32,7 @@ wwwdoc: util $(helpfiles)
 	    cp $$file htdocs;  \
 	  done; \
 	done
-
+	cp src/VMBLogo/vmb128.jpg src/VMBLogo/vmb200.jpg src/VMBLogo/vmb64.gif htdocs
 
 clean:
 	rm -f *.o *~ 
